2007-07-30  Ankit Jain  <jankit@novell.com>

	* SimpleProjectMakefileHandler.cs (Deploy): Make prefix for REFERENCES
	variable consistent with other ref variables.
	Fix emitted path for DLL_REFERENCES to be compatible with makefile integration.
	* SolutionDeployer.cs (CreateConfigureDotAC): Use @defaultConf.	
	* templates/Makefile.include: Update to add prefix for REFERENCES (when required).
	* templates/configure.template: Small fix.

2007-07-25  Ankit Jain  <jankit@novell.com>

	* templates/configure.template: Don't use "\n" or "\t" in echo-s, sh doesn't
	seem to be able to handle them.

2007-07-25  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Autotools.addin.xml, MonoDevelop.Autotools.mdp,
	  gtk-gui/MonoDevelop.Autotools.GenerateMakefilesDialog.cs,
	  gtk-gui/gui.stetic: Cosmetic fixes.

2007-07-25  Ankit Jain  <jankit@novell.com>

	* SimpleProjectMakefileHandler.cs (Deploy): 'chmod +x' exe-wrappers.
	Ensure that .in files are regen'ed on configure.

2007-07-25  Ankit Jain  <jankit@novell.com>

	* GenerateMakefilesDialog.cs:
	* gtk-gui/MonoDevelop.Autotools.GenerateMakefilesDialog.cs:
	* gtk-gui/gui.stetic:
	Use radio buttons instead of a checkbox.
	* templates/configure.template: Improve message.

2007-07-24  Ankit Jain  <jankit@novell.com>

	* templates/Makefile.noauto.project.template:
	* templates/Makefile.solution.template:
	* templates/configure.template:
	* templates/rules.make:
	Missed these too :(

2007-07-24  Ankit Jain  <jankit@novell.com>

	* GenerateMakefilesDialog.cs:
	* gtk-gui/MonoDevelop.Autotools.GenerateMakefilesDialog.cs:
	Oops, forgot to commit!

2007-07-24  Ankit Jain  <jankit@novell.com>

	Add support for generating non-autotools (simple) makefiles.

	* SolutionDeployer.cs: Update to use new templates for simple
	makefiles and generate those.
	* SolutionMakefileHandler.cs: Likewise.
	* SimpleProjectMakefileHandler.cs: Likewise.

	* AutotoolsContext.cs (TemplateDir): New.
	(GetConfigurations): New.
	(AddGeneratedFile): New.